# tooluniverse-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TOOL UNIVERSE OVERVIEW.md  example_call_result.json  example_search_results.json  example_tool_info.json  example_tool_list.json  pyproject.toml
src/tooluniverse_cli/: __init__.py  cli.py  utils.py
src/tooluniverse_cli/commands/: __init__.py  call_command.py  info_command.py  list_command.py  search_command.py
tests/: test_cli.py
